# scoring-service-ai-interviewer

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: config.py  csv_client.py  main.py  models.py  prompts.py  utils.py
app/llm/: base.py  factory.py  gemini.py  lm_studio.py
tests/: test_app.py  test_csv_client.py  test_gemini_provider.py  test_prompt_engine.py  test_utils.py
