[build-system]
requires = ["setuptools>=62", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-interview-scoring"
version = "0.1.0"
description = "Batch tools and API for evaluating interview responses with LLMs."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [
  { name = "Violet" }
]
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "pydantic",
  "pydantic-settings",
  "python-dotenv",
  "requests",
  "google-generativeai",
  "openai"
]

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
csv-client = "app.csv_client:main"

[tool.setuptools.packages.find]
include = ["app*"]
